--- a/html/css/skeleton.css
+++ b/html/css/skeleton.css
@@ -416,3 +416,16 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
+
+.container p .container h1 {
+    text-align: center;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5em;
+}
+
+.container img {
+  display: block;
+  margin: auto;
+}
