--- a/html/css/skeleton.css
+++ b/html/css/skeleton.css
@@ -416,3 +416,17 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
+.container {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container h1{
+  font-size: 2.5em
+}
+
+.container img {
+    display: block;
+    margin: auto;
+}
