--- a/html/css/skeleton.css
+++ b/html/css/skeleton.css
@@ -417,15 +417,16 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
+.container {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-.container p .container h1 {
-    text-align: center;
-    display: block;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2.5em;
+.container h1{
+  font-size: 2.5em
 }
 
 .container img {
-  display: block;
-  margin: auto;
+    display: block;
+    margin: auto;
 }
